# rust_cpp_serliazation

cpp_interop/: CMakeLists.txt  interop.cpp
rust_interop/: Cargo.toml
rust_interop/src/: main.rs  tiny_aircraft_state.h  tiny_aircraft_state_data.h  tiny_aircraft_state_data.rs
